--- a/assets/fonts.scss
+++ b/assets/fonts.scss
@@ -1,26 +1,43 @@
+.font-18 {
+  font-size: 18px;
 
-
-.font-18{
-    font-size: 18px;
+  @media (max-width: 720px) {
+    font-size: 16px;
+  }
 }
 
-.font-20{
-    font-size: 20px;
+.font-20 {
+  font-size: 20px;
+
+  @media (max-width: 720px) {
+    font-size: 17px;
+  }
 }
 
-.font-22{
-    font-size: 22px;
+.font-22 {
+  font-size: 22px;
+
+  @media (max-width: 720px) {
+    font-size: 19px;
+  }
 }
 
-.font-24{
-    font-size: 24px;
+.font-24 {
+  font-size: 24px;
+
+  @media (max-width: 720px) {
+    font-size: 21px;
+  }
 }
 
-.font-28{
-    font-size: 28px;
+.font-28 {
+  font-size: 28px;
+
+  @media (max-width: 720px) {
+    font-size: 23px;
+  }
 }
 
-
-.font-600{
-    font-weight: 600;
+.font-600 {
+  font-weight: 600;
 }
